
  [ Andrea Azzarone ]
  * Add an option to notify that a key press is actually an "auto
    repeat" one. (LP: #1572241)

  [ Alberts Muktupāvels ]
  * OpenGL: use the number of Opaque windows around to decide whether
    paint the bg or not (LP: #1574866)

  [ Marco Trevisan (Treviño) ]
  * Scale: use the selectedWindow as starting point when focusing a
    window (LP: #1575168)

 -- Andrea Azzarone <azzaronea@gmail.com>  Thu, 26 May 2016 01:56:18 +0200

compiz (1:0.9.12.2+16.04.20160415-0ubuntu1) xenial; urgency=medium

  [ Martin Wimpress ]
  * mate.ini: Fixes flickery thumbnails

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 15 Apr 2016 05:30:50 +0000

compiz (1:0.9.12.2+16.04.20160331-0ubuntu1) xenial; urgency=medium

  [ Alberts Muktupāvels ]
  * gtk-window-decorator: fix typos in tests.

  [ Martin Wimpress ]
  * Fix compiz-mate Recommends: use ubuntu-mate-wallpapers-common.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Thu, 31 Mar 2016 22:55:09 +0000

compiz (1:0.9.12.2+16.04.20160318-0ubuntu1) xenial; urgency=medium

  [ Alberts Muktupāvels ]
  * gtk-window-decorator: Use the Marco gsettings in MATE session.
  * gtk-window-decorator: add support for dark theme variant.

  [ Martin Wimpress ]
  * MATE Compiz configuration is now consistent with composited Marco
    and Metacity.

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 18 Mar 2016 10:08:19 +0000

compiz (1:0.9.12.2+16.04.20160311-0ubuntu1) xenial; urgency=medium

  [ Alberts Muktupāvels ]
  * Avoid GtkStyleContext warnings with GTK+ 3.20+.
  * Remove GWDSettingsXPropertyStorageInterface.
  * gtk-window-decorator: Remove unused setting from mutter.

  [ Martin Wimpress ]
  * mate.ini: Enable 'Keep Minimzed Windows' by default for the MATE
    profile (LP: #1067951)

  [ Sam Spilsbury smspillaz@gmail.com ]
  * Fix broken tests

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 11 Mar 2016 08:26:45 +0000

compiz (1:0.9.12.2+16.04.20160209-0ubuntu1) xenial; urgency=medium
