@@ -11,6 +11,7 @@ compiz (1:0.9.12.2+16.04.20160415-0ubuntu2) UNRELEASED; urgency=medium
   [ Marco Trevisan (Treviño) ]
   * Scale: use the selectedWindow as starting point when focusing a
     window (LP: #1575168)
+  * Scale: allow to iterate through windows using Tab key
 
  -- Andrea Azzarone <azzaronea@gmail.com>  Thu, 26 May 2016 01:56:18 +0200
 
